# OpenSalesAI

./: .env.example  .gitignore  CLAUDE.md  docker-compose.infra.yml  docker-compose.yml  eslint.config.js  package-lock.json  package.json  tsconfig.base.json
apps/dashboard/: next.config.js  package.json  tailwind.config.ts  tsconfig.json  vitest.config.ts
apps/dashboard/__tests__/: DataTable.test.tsx  KPICard.test.tsx  TaskCard.test.tsx
apps/dashboard/src/: store.ts
apps/dashboard/src/app/: globals.css  layout.tsx  page.tsx  providers.tsx
apps/dashboard/src/components/: DataTable.tsx  KPICard.tsx  MapPlaceholder.tsx  MapView.tsx  OrderTimeline.tsx  Providers.tsx  Sidebar.tsx  TaskCard.tsx  TopBar.tsx
apps/dashboard/src/hooks/: useAuth.ts
apps/dashboard/src/lib/: api-client.ts  api.ts  mock-data.ts  store.ts  utils.ts
apps/dashboard/src/store/: index.ts
apps/mobile/: App.tsx  app.json  package.json  tsconfig.json
apps/mobile/src/components/: KPICard.tsx  OrderItem.tsx  (+2 more)
apps/retailer-pwa/: next.config.js  package.json  tailwind.config.ts  tsconfig.json
apps/retailer-pwa/public/: manifest.json
data/prompts/: analytics-query.md  coach-scenario.md  order-parser.md  task-generator.md
data/sample/: products.csv  reps.csv  stores.csv  transactions.csv
docs/: API.md  ARCHITECTURE.md  DEPLOYMENT.md
infra/: Caddyfile
infra/docker/: api-gateway.Dockerfile  dashboard.Dockerfile  eb2b-service.Dockerfile  notification-service.Dockerfile  retailer-pwa.Dockerfile  sfa-service.Dockerfile
infra/docker/postgres/: init-multiple-dbs.sh
infra/prometheus/: prometheus.yml
scripts/: load-test.js  migrate.ps1  security-audit.ps1  seed-demo.ts  setup-qdrant.py  train-models.py
services/ai-service/: Dockerfile  pyproject.toml  requirements.txt
services/ai-service/app/: main.py
services/ai-service/app/agents/: analytics_agent.py  coach_agent.py  collection_agent.py  order_agent.py  promo_agent.py  state.py  supervisor.py
services/ai-service/app/api/: agents.py  predictions.py  rag.py  tasks.py
services/ai-service/app/core/: config.py  database.py  security.py
services/ai-service/app/ml/: attrition.py  credit_score.py  demand_forecast.py  route_optimizer.py  stockout.py
services/ai-service/app/rag/: embeddings.py  pipeline.py  prompts.py  retriever.py
services/ai-service/app/services/: task_generator.py  tts_service.py  whisper_stt.py
services/ai-service/tests/: conftest.py  test_demand_forecast.py  test_order_parser.py  test_rag_pipeline.py  test_task_generator.py
services/api-gateway/: package.json
services/api-gateway/prisma/: schema.prisma
services/api-gateway/src/: index.ts
services/eb2b-service/: package.json
services/eb2b-service/__tests__/: cart.test.ts  catalog.test.ts  whatsapp.test.ts
services/eb2b-service/src/: index.ts
services/notification-service/: package.json
services/notification-service/src/: index.ts
services/sfa-service/: package.json  vitest.config.ts
services/sfa-service/__tests__/: beats.test.ts  gps-validator.test.ts  orders.test.ts  visits.test.ts
services/sfa-service/src/: index.ts
workflows/: WF-001-nightly-pipeline.json  WF-002-task-generation.json  WF-003-task-distribution.json  WF-004-whatsapp-order.json  WF-005-voice-order.json  WF-007-task-completion.json  WF-009-stockout-alert.json  WF-014-distributor-sync.json  WF-015-manager-digest.json
(+67 files in other folders)
