[project]
name = "opensalesai-ai-service"
version = "0.1.0"
description = "AI/ML core engine for OpenSalesAI — task generation, demand forecasting, LangGraph agents, and RAG pipelines."
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "OpenSalesAI Contributors"},
]

[build-system]
requires = ["setuptools>=75.0", "wheel"]
build-backend = "setuptools.build_meta"

# ── Ruff (linter + formatter) ───────────────────────────────────────────────

[tool.ruff]
target-version = "py311"
line-length = 100
fix = true

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "N",    # pep8-naming
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "S",    # flake8-bandit
    "A",    # flake8-builtins
    "C4",   # flake8-comprehensions
    "DTZ",  # flake8-datetimez
    "T20",  # flake8-print
    "RET",  # flake8-return
    "SIM",  # flake8-simplify
    "TCH",  # flake8-type-checking
    "PTH",  # flake8-use-pathlib
    "PLW",  # pylint warnings
    "RUF",  # ruff-specific
]
ignore = [
    "S101",   # assert usage (OK in tests)
    "S301",   # pickle usage (needed for ML models)
    "S603",   # subprocess calls (needed for Piper TTS)
    "S607",   # partial path subprocess (needed for Piper)
    "B008",   # function call in default arg (Depends())
    "RUF012", # mutable class attributes (Pydantic models)
    "UP007",  # X | Y union syntax (keep Optional for readability)
]

[tool.ruff.lint.isort]
known-first-party = ["app"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101", "S106"]
"scripts/**/*.py" = ["T20"]

# ── Black (formatter) ───────────────────────────────────────────────────────

[tool.black]
target-version = ["py311"]
line-length = 100

# ── MyPy (type checking) ────────────────────────────────────────────────────

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = false  # FastAPI decorators
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = [
    "sentence_transformers.*",
    "faster_whisper.*",
    "prophet.*",
    "xgboost.*",
    "sklearn.*",
    "ortools.*",
    "qdrant_client.*",
    "mlflow.*",
    "minio.*",
    "pydub.*",
    "gtts.*",
    "redis.*",
]
ignore_missing_imports = true

# ── Pytest ───────────────────────────────────────────────────────────────────

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--tb=short",
    "-q",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "gpu: marks tests requiring GPU",
    "integration: marks integration tests",
]

# ── Coverage ─────────────────────────────────────────────────────────────────

[tool.coverage.run]
source = ["app"]
omit = [
    "tests/*",
    "scripts/*",
    "app/core/config.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.",
    "if TYPE_CHECKING:",
    "pass",
]
